tests/basic/semantics/divide_by_zero.diag
tests/basic/semantics/divide_by_zero.bas:1:13: error[B2002]: divide by zero
10 PRINT 10 / 0
            ^
